# aiuce-sovereignty-gateway

./: .gitignore  LICENSE  README.md  pyproject.toml
aiuce_sovereignty_gateway/: __init__.py  gateway.py  principles.py  veto.py
examples/: basic_usage.py
tests/: test_gateway.py
