[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiuce-sovereignty-gateway"
version = "0.1.0"
description = "The deterministic constitutional layer for AI agents."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bill Gao", email = "bill@example.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/billgaohub/aiuce-sovereignty-gateway"
Repository = "https://github.com/billgaohub/aiuce-sovereignty-gateway"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiuce_sovereignty_gateway*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
